<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_no">No</string>
    <string name="lbl_ampliar">Ampliar</string>
    <string name="lbl_f_sica">Física</string>
    <string name="lbl_s">Sí</string>
    <string name="msg_seguro_que_qui2">¿Seguro que quieres eliminarlo?</string>
    <string name="lbl2">/       /</string>
    <string name="lbl_examen">Examen</string>
    <string name="msg_archivo_descarg">Archivo descargado</string>
    <string name="lbl_firstname">Firstname</string>
    <string name="lbl_study_enjoy">Study &amp; Enjoy</string>
    <string name="lbl_modificar">Modificar</string>
    <string name="lbl_we">We</string>
    <string name="lbl_editar_perfil">Editar perfil</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_calendario">Calendario</string>
    <string name="lbl_subir_foto">Subir foto</string>
    <string name="lbl_tel_fono">Teléfono</string>
    <string name="msg_selecciona_una">Selecciona una fecha</string>
    <string name="lbl_elige">Elige:</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_programaci_n">Programación</string>
    <string name="msg_evento_eliminad">Evento eliminado</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_ocio">Ocio</string>
    <string name="msg_evento_modifica">EVENTO MODIFICADO</string>
    <string name="lbl_eliminar">Eliminar</string>
    <string name="lbl_proyecto">Proyecto</string>
    <string name="lbl_tu">Tu</string>
    <string name="msg_seguro_que_qui">¿Seguro que quiere salir?</string>
    <string name="lbl_t_tulo">Título</string>
    <string name="lbl_subir_apuntes">Subir apuntes
</string>
    <string name="lbl_historia">Historia</string>
    <string name="lbl_asignaturas">Asignaturas</string>
    <string name="msg_apuntes_2_fech">Apuntes 2 (fecha)</string>
    <string name="msg_apuntes_5_fech">Apuntes 5 (fecha)</string>
    <string name="lbl_ver_apuntes">Ver apuntes</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_editar_evento">Editar evento</string>
    <string name="lbl_lastname">Lastname</string>
    <string name="lbl_su">Su</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_foto_subida">Foto subida</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_birthday">Birthday
</string>
    <string name="lbl_subir">Subir</string>
    <string name="msg_apuntes_8_fech">Apuntes 8 (fecha)</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_buscar">Buscar</string>
    <string name="lbl_20">20</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">2</string>
    <string name="lbl_27">27</string>
    <string name="msg_apuntes_4_fech">Apuntes 4 (fecha)</string>
    <string name="lbl_28">28</string>
    <string name="lbl_eventos">Eventos</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_222">22</string>
    <string name="lbl_evento_a_adido2">Evento Añadido</string>
    <string name="msg_selecciona_la_f">Selecciona la foto</string>
    <string name="lbl_29">29</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_apuntes">Apuntes</string>
    <string name="msg_apuntes_3_fech">Apuntes 3 (fecha)</string>
    <string name="lbl_a_adir_evento">Añadir evento</string>
    <string name="msg_selecciona_la_a">Selecciona la asignatura</string>
    <string name="lbl_fecha">Fecha</string>
    <string name="lbl_12">12</string>
    <string name="lbl_apuntes_subidos">Apuntes subidos</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_11">11</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_name">Name</string>
    <string name="msg_menu_desplegabl">Menu desplegable</string>
    <string name="msg_evento_eliminad2">Evento Eliminadp</string>
    <string name="msg_t_tulo_del_even">Título del evento</string>
    <string name="lbl_descargar">Descargar</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="msg_apuntes_1_fech">Apuntes 1 (fecha)</string>
    <string name="lbl_subir_foto2">Subir foto
</string>
    <string name="lbl">/    /</string>
    <string name="msg_evento_modifica2">Evento Modificado</string>
    <string name="msg_a_adir_asignatu">Añadir Asignatura</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_interfaces">Interfaces</string>
    <string name="lbl_asignatura">Asignatura</string>
    <string name="lbl_1">1</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_editar">Editar
</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="msg_selecciona_el_f">Selecciona el fichero</string>
    <string name="lbl_8">8</string>
    <string name="lbl_9">9</string>
    <string name="msg_apuntes_7_fech">Apuntes 7 (fecha)</string>
    <string name="lbl_abril_2022">Abril 2022</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_a_adir">Añadir</string>
    <string name="msg_apuntes_6_fech">Apuntes 6 (fecha)</string>
    <string name="msg_interfaces_de_u">Interfaces de usuario</string>
    <string name="lbl_ver">Ver</string>
    <string name="lbl_reg_strate">Regístrate</string>
    <string name="lbl_ocio_cercano">Ocio cercano</string>
    <string name="lbl_apuntes_2">Apuntes 2</string>
    <string name="lbl_comentarios">Comentarios</string>
    <string name="lbl_perfil">Perfil</string>
    <string name="lbl_evento_a_adido">EVENTO AÑADIDO</string>
    <string name="msg_confirmar_logou">Confirmar logout</string>
    <string name="lbl_subir_apuntes2">Subir apuntes</string>
    <string name="msg_nombre_de_la_as">Nombre de la asignatura</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="title_activity_desplegable">DesplegableActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
