<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="calendario1RowModel" type="com.application.app.modules.calendario.data.model.Calendario1RowModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLine"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnMo"
            android:layout_height="@dimen/_22pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_2pxh"
            android:paddingStart="@dimen/_2pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@string/lbl_mo" android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTu"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded" tools:text="@string/lbl_mo"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnTu"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingHorizontal="@dimen/_4pxh"
            android:paddingVertical="@dimen/_4pxv"
            android:singleLine="true" android:text="@string/lbl_tu"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnWe"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toEndOf="@+id/btnMo"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded" tools:text="@string/lbl_tu"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnWe"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_2pxh"
            android:paddingStart="@dimen/_2pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@string/lbl_we" android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTh"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toEndOf="@+id/btnTu"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded" tools:text="@string/lbl_we"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnTh"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingHorizontal="@dimen/_4pxh"
            android:paddingVertical="@dimen/_4pxv"
            android:singleLine="true" android:text="@string/lbl_th"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnFr"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/btnWe"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded" tools:text="@string/lbl_th"/>
        <androidx.appcompat.widget.AppCompatButton
            android:clickable="true" android:ellipsize="end"
            android:gravity="center" android:id="@+id/btnFr"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_5pxh"
            android:paddingStart="@dimen/_5pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@string/lbl_fr" android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSa"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toEndOf="@+id/btnTh"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded" tools:text="@string/lbl_fr"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSa"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingHorizontal="@dimen/_4pxh"
            android:paddingVertical="@dimen/_4pxv"
            android:singleLine="true" android:text="@string/lbl_sa"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSu"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/btnFr"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded_1" tools:text="@string/lbl_sa"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSu"
            android:layout_height="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="@dimen/_22pxh"
            android:paddingHorizontal="@dimen/_4pxh"
            android:paddingVertical="@dimen/_4pxv"
            android:singleLine="true" android:text="@string/lbl_su"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSa"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnRounded_1" tools:text="@string/lbl_su"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
