<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="confirmarLogoutVM" type="com.application.app.modules.confirmarlogout.data.viewmodel.ConfirmarLogoutVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintConfirmarlogou"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_300">
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtSeguroQueQui"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_65pxh"
            android:layout_marginStart="@dimen/_65pxh"
            android:layout_marginTop="@dimen/_58pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{confirmarLogoutVM.confirmarLogoutModel.txtSeguroQueQui}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/txtSansitaSwashedromanregular18_1" tools:text="@string/msg_seguro_que_qui"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup399"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginBottom="@dimen/_44pxv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSeguroQueQui"
            app:layout_constraintVertical_bias="0.302">

            <TextView
                android:id="@+id/txtS"
                style="@style/txtSolidRounded_6"
                android:layout_width="98dp"
                android:layout_height="65dp"
                android:layout_marginEnd="68dp"
                android:clickable="true"
                android:ellipsize="end"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingBottom="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@{confirmarLogoutVM.confirmarLogoutModel.txtS}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/lbl_s" />

            <TextView
                android:id="@+id/txtNo"
                style="@style/txtSolidRounded_7"
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_38pxh"
                android:ellipsize="end"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingBottom="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@{confirmarLogoutVM.confirmarLogoutModel.txtNo}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtS"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/lbl_no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
